<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference
        android:key="pref_enabled"
        android:title="@string/pref_enable"
        android:summary="@string/pref_disabled"
        android:defaultValue="false" />
    <ListPreference
        android:key="pref_sunset"
        android:title="@string/pref_sunset"
        android:summary="@string/pref_sunset_summary"
        android:dialogTitle="@string/pref_sunset"
        android:entries="@array/pref_sunset_entries"
        android:entryValues="@array/pref_sunset_values"
        android:defaultValue="@string/pref_sunset_default" />
    <EditTextPreference android:key="pref_delay"
        android:title="@string/pref_delay"
        android:summary="@string/pref_delay_summary"
        android:defaultValue="@string/pref_delay_default"
        android:inputType="number"/>
</PreferenceScreen>